Title,color changed

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GIT Session-Original</title>
+  <title>GIT Session-clone</title>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script> 
 $(document).ready(function(){
@@ -25,7 +25,7 @@ $(document).ready(function(){
 <button id="start">Start Animation</button>
 <button id="stop">Stop Animation</button>
 <p>jQuery Animation</p>
-<div style="background:#98bf21;height:100px;width:100px;position:absolute;"></div>
+<div style="background:red;height:100px;width:100px;position:absolute;"></div>
 
 </body>
 </html>
