--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ $(document).ready(function(){
 <button id="start">Start Animation</button>
 <button id="stop">Stop Animation</button>
 <p>jQuery Animation</p>
-<div style="background:red;height:100px;width:100px;position:absolute;"></div>
+<p>Created By-Prasanjith</p>
+<br><div style="background:red;height:100px;width:100px;position:absolute;"></div>
+
 
 </body>
 </html>
